--- a/themes/MountainlandTheme/templates/components/ProductAvailability.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductAvailability.html.twig
@@ -7,7 +7,7 @@
 {% endif %}
 
 <div
-    class="availability-target-{{ productId }}_{{ uom }}"
+    class="space-y-3 py-4 border-y border-gray-200 availability-target-{{ productId }}_{{ uom }}"
     data-availability-loader-target="availability"
     data-id="{{ productId }}_{{ uom }}">
 </div>
