--- a/themes/MountainlandTheme/templates/components/Grid.html.twig
+++ b/themes/MountainlandTheme/templates/components/Grid.html.twig
@@ -28,9 +28,7 @@
             </div>
 
             {% if items|length > initialCount %}
-                <twig:GridViewMoreButton 
-                    :controllerName="controllerName"
-                />
+                {% include 'components/ViewMore.html.twig' with { controllerName: controllerName } %}
             {% endif %}
         </div>
     </div>
