Update category listing, Grid, GridItem, and submodule for pagination and UI improvements

--- a/themes/MountainlandTheme/templates/category/category-listing.html.twig
+++ b/themes/MountainlandTheme/templates/category/category-listing.html.twig
@@ -30,6 +30,7 @@
 
         <twig:Grid 
             :items="categories.pagination.items" 
+            :pagination="categories.pagination"
             title="Shop By Category" 
         />
     </main>
