--- a/themes/MountainlandTheme/templates/components/Grid.html.twig
+++ b/themes/MountainlandTheme/templates/components/Grid.html.twig
@@ -1,11 +1,10 @@
 {% set title = title|default('Shop By Category') %}
-{% set initialCount = initialCount|default(8) %}
-{% set controllerName = controllerName|default('toggle-grid') %}
 {% set iconExtension = iconExtension|default('png') %}
 {% set iconBasePath = iconBasePath|default('var/assets/images/product-types/icons/') %}
 {% set useLink = useLink|default(true) %}
+{% set pagination = pagination|default(null) %}
 
-<section class="py-12" data-controller="{{ controllerName }}">
+<section class="py-12">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         {% if title %}
             <div class="mb-8">
@@ -14,12 +13,10 @@
         {% endif %}
         
         <div class="divisions-container">
-            <div class="divisions-grid" data-toggle-grid-target="grid">
+            <div class="divisions-grid">
                 {% for item in items %}
                     <twig:GridItem 
                         :item="item" 
-                        :index="loop.index" 
-                        :initialCount="initialCount"
                         :iconExtension="iconExtension"
                         :iconBasePath="iconBasePath"
                         :useLink="useLink"
@@ -27,8 +24,12 @@
                 {% endfor %}
             </div>
 
-            {% if items|length > initialCount %}
-                {% include 'components/ViewMore.html.twig' with { controllerName: controllerName } %}
+            {% if pagination %}
+                <div class="pagination-wrapper mt-12">
+                    {{ knp_pagination_render(pagination, 'components/pagination.html.twig', {
+                        'limit': app.request.query.get('limit', 10)
+                    }) }}
+                </div>
             {% endif %}
         </div>
     </div>
