--- a/templates/components/Navigation/Breadcrumb.html.twig
+++ b/templates/components/Navigation/Breadcrumb.html.twig
@@ -5,7 +5,7 @@
         <span class="text-gray-400">&gt;</span>
         {% for item in this.breadcrumbs|reverse %}
             {% if item.icon is defined and item.icon is not null %}
-                <img src="{{ asset(item.icon) }}" alt="{{ item.label|default('') }}" class="w-4 h-4" />
+                <img src="{{ asset(item.icon) }}" alt="{{ item.name }}" class="w-4 h-4" />
             {% endif %}
             {% if item.url is null %}
                 <span class="font-semibold text-gray-900">{{ item.name }}</span>
